force-app/main/default/objects/Admission_Officer_Tracking__c/Admission_Officer_Tracking__c.object-meta.xml
<CustomObject>
    <label>Admission Officer Tracking</label>
    <nameField>
        <displayFormat>AOT -{0000000}</displayFormat>
        <label>Admission Officer Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Admission Officer Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>