force-app/main/default/objects/Admission_Officer_Tracking__c/fields/AO_Available__c.field-meta.xml
<CustomField>
    <fullName>AO_Available__c</fullName>
    <label>AO Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>