force-app/main/default/objects/Admission_Officer_Tracking__c/fields/AO_On_Break__c.field-meta.xml
<CustomField>
    <fullName>AO_On_Break__c</fullName>
    <label>AO On Break</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>