force-app/main/default/objects/Admission_Officer_Tracking__c/fields/AO_On_Meeting__c.field-meta.xml
<CustomField>
    <fullName>AO_On_Meeting__c</fullName>
    <label>AO On Meeting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>