force-app/main/default/objects/Admission_Officer_Tracking__c/fields/AO_s_Checked_In__c.field-meta.xml
<CustomField>
    <fullName>AO_s_Checked_In__c</fullName>
    <label>AO&apos;s Checked-In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>