force-app/main/default/objects/Admission_Officer_Tracking__c/fields/Interview__c.field-meta.xml
<CustomField>
    <fullName>Interview__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interview</label>
    <referenceTo>Interview__c</referenceTo>
    <relationshipLabel>Admission Officer Tracking</relationshipLabel>
    <relationshipName>Admission_Officer_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>