force-app/main/default/objects/Admission_Officer_Tracking__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Admission Officer Tracking</relationshipLabel>
    <relationshipName>Admission_Officer_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>