force-app/main/default/objects/Admission_Officer_Tracking__c/fields/Not_Available_AO__c.field-meta.xml
<CustomField>
    <fullName>Not_Available_AO__c</fullName>
    <label>Not Available AO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>