force-app/main/default/objects/Admission_Officer_Tracking__c/fields/Total_AO_Number__c.field-meta.xml
<CustomField>
    <fullName>Total_AO_Number__c</fullName>
    <label>Total AO Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>