force-app/main/default/objects/Admission_Officer_Tracking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Interview_Id__c</columns>
    <columns>Lead__c</columns>
    <columns>AO_s_Checked_In__c</columns>
    <columns>AO_Available__c</columns>
    <columns>AO_On_Break__c</columns>
    <columns>AO_On_Meeting__c</columns>
    <columns>Total_AO_Number__c</columns>
    <columns>Not_Available_AO__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>